#292 Migrated to Spring Boot 3 using OpenRewrite
Please note:
- Galapagos is now on Java 17
- KafkaSenderImpl no longer needs KafkaFutureDecoupler since kafkaTemlate.send() now returns a CompletableFuture
- KafkaSenderImplTest now performs an assertFalse() as a result
- SecurityConfig has been commented out since Keycloak is deprecated and not supported in Spring Boot 3 / Spring 6. Unfortunately I don't know how to implement OAuth 2 at this time either.

I can't seem to figure out how to run it locally - I get a 401 error when I try to run it from my IDE with the demo,democonf,actuator profiles:

Could not access or read /service_accounts workaround endpoint: Server returned 401 for /service_accounts

OpenRewrite configuration used to perform migration:
```xml
<plugin>
	<groupId>org.openrewrite.maven</groupId>
	<artifactId>rewrite-maven-plugin</artifactId>
	<version>5.2.4</version>
	<configuration>
		<activeRecipes>
			<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0</recipe>
		</activeRecipes>
	</configuration>
	<dependencies>
		<dependency>
			<groupId>org.openrewrite.recipe</groupId>
			<artifactId>rewrite-spring</artifactId>
			<version>5.0.2</version>
		</dependency>
	</dependencies>
</plugin>
```